<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/img"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/Loginpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="650dp">


            <RelativeLayout
                android:id="@+id/Frame2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="220dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/Vector"
                    android:layout_width="213.17dp"
                    android:layout_height="73.22dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:contentDescription="Vector"
                    android:src="@drawable/loginback" />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/Frame3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_alignParentBottom="true">

                <View
                    android:id="@+id/Rectangle2"
                    android:layout_width="match_parent"
                    android:layout_height="351dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/rectangle2_shape" />




                <RelativeLayout
                    android:id="@+id/Frame1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="39dp"
                    android:gravity="center">

                    <View
                        android:id="@+id/Rectangle3"
                        android:layout_width="250dp"
                        android:layout_height="47dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="220dp"
                        android:background="@drawable/rectangle3_shape"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/welcome"
                        android:layout_width="184dp"
                        android:layout_height="36.5dp"
                        android:layout_gravity="center_horizontal|center"
                        android:layout_marginLeft="36dp"
                        android:layout_marginTop="225dp"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/Get_Started_string"
                        android:textColor="@color/_bg__Loginpage_color"
                        android:textSize="15sp" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/No_Account_Signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="95dp"
                    android:gravity="center">
                    <!--257-->
                    <TextView
                        android:id="@+id/no_Account_Signup"
                        android:layout_width="457dp"
                        android:layout_height="23.5dp"
                        android:layout_gravity="center_horizontal|center"
                        android:layout_marginLeft="-3dp"
                        android:layout_marginTop="220dp"
                        android:gravity="center"
                        android:text="@string/No_Account"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp" />

                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout android:id="@+id/Frame4"
            android:layout_marginTop="412dp"
            android:layout_marginStart="71dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >


            <RelativeLayout android:id="@+id/Frame5"
                android:layout_marginTop="1dp"
                android:layout_marginStart="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

            </RelativeLayout>

            <TextView
                android:id="@+id/Signup"
                android:layout_width="233dp"
                android:layout_height="81.5dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="-4dp"
                android:layout_marginTop="-1dp"
                android:gravity="center"
                android:text="@string/sign"
                android:textColor="@color/Signup_color"
                android:textSize="25sp" />

        </RelativeLayout>

        <!--        </RelativeLayout>-->

    </ScrollView>
</RelativeLayout>